# google-play-review-analyzer

./: README.md  plan.md
google-play-review-analyzer/: .dockerignore  .gitignore  Dockerfile  README.md
google-play-review-analyzer/backend/: .env.example  pyproject.toml
google-play-review-analyzer/backend/app/: main.py
google-play-review-analyzer/backend/app/core/: config.py
google-play-review-analyzer/backend/app/models/: analysis.py  review.py  scraper.py
google-play-review-analyzer/backend/app/routers/: analysis.py  reviews.py
google-play-review-analyzer/backend/app/schemas/: api.py
google-play-review-analyzer/backend/app/services/: groq_service.py  scraper.py
google-play-review-analyzer/backend/docs/: routers-and-schemas.md
google-play-review-analyzer/backend/tests/: reviews.rest
google-play-review-analyzer/frontend/: index.html  orval.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
google-play-review-analyzer/frontend/src/: App.tsx
google-play-review-analyzer/frontend/src/api/: axios-instance.ts
google-play-review-analyzer/plans/: custom-prompts-on-input-screen.md
plans/: 2-plan-scraper-service.md  3-plan-pydantic-scraper-model.md  4-plan-reviews-endpoint-phase1.md  4.0-plan-ai-analysis.md  4.2-plan-ai-analysis-phase2.md  5-plan-connect-frontend-and-backend.md  5-plan.md  6-plan-fix-groq-structured-outputs.md  6.1-plan-fix-groq-sdk.md  7-generate-reply-endpoint.md  7.1-move-reply-instructions-to-drawer.md  7.2-groq-reply-generation.md  8- deploy.md  8.2- fix-production-api-url.md  plan-repo-setup.md
(+19 files in other folders)
